<resources>
    <string name="app_name">Camara</string>
    <string name="titulo">Gestión de camara</string>
    <string name="menu1">Lector de barras/QR</string>
    <string name="menu2">Tomar foto</string>
    <string name="titulo1">Lector de barras</string>
    <string name="escanear">Escanear</string>
    <string name="res">Codigo leido</string>
    <string name="descripcion">Captura de descripcion</string>
    <string name="capturar">Capturar</string>
    <string name="Limpiar">Limpiar</string>
    <string name="foto">Tomar fotografía</string>
    <string name="todo">TODO</string>
    <string name="buscar">Buscar</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>


</resources>